--- a/landingpage/html/mailchimp.html
+++ b/landingpage/html/mailchimp.html
@@ -1,4 +1,4 @@
-<form action="http://widcy.us3.list-manage1.com/subscribe/post?u=f14416d828fedfb6a45b20adf&amp;id=e3678633c3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+<form action="http://railsgirls54.us8.list-manage1.com/subscribe/post?u=8520edcf9e8c074adfdf4c226&amp;id=77dbd2346c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <h2>Subscribe to our mailing list</h2>
     <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
     <div class="mc-field-group">
@@ -18,6 +18,6 @@
         <div class="response" id="mce-error-response" style="display:none"></div>
         <div class="response" id="mce-success-response" style="display:none"></div>
     </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;"><input type="text" name="b_f14416d828fedfb6a45b20adf_e3678633c3" value=""></div>
+    <div style="position: absolute; left: -5000px;"><input type="text" name="b_8520edcf9e8c074adfdf4c226_77dbd2346c" value=""></div>
     <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 </form>
