--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -17,13 +17,13 @@
 <div id="top-nav" style="height: 60px;" class="sticky-nav nav"  >
     &nbsp;
     <ul class="nav nav-tabs navbar-fixed-top navex" style=" padding: 10px" data-spy="affix" data-offset-top="100" id="affix">
-        <li class="active"><a href="#why" onclick="mixpanel.track('why')">Why</a></li>
-        <li><a href="#how" onclick="mixpanel.track('how')">how</a></li>
-        <li><a href="#what" onclick="mixpanel.track('what')">what</a></li>
-        <li><a href="#team" onclick="mixpanel.track('team')">team</a></li>
+        <li class="active"><a href="#why">Why</a></li>
+        <li><a href="#how" >how</a></li>
+        <li><a href="#what" >what</a></li>
+        <li><a href="#team" >team</a></li>
         <a id="brand" class="brand hide"><img src="img/widcy_logo_orange.png" style="height: 40px; left: 45%; position: absolute;"></a>
         <button id='join' type="submit" class="btn btn-default pull-right" style="color:red; margin-top: 3px;
-        margin-right: 30px;" onclick="checkSubscribe(); mixpanel.track('join');">Join us</button>
+        margin-right: 30px;" onclick="checkSubscribe();">Join us</button>
     </ul>
 </div>
 <div id="why" class="row sect" ng-include="'html/why.html'"></div>
@@ -31,8 +31,8 @@
 <div id="what" class="row sect" ng-include="'html/what.html'"></div>
 <div id="team" class="row sect" ng-include="'html/team.html'"></div>
 <div style="margin-left: 50px; margin-bottom: 30px"><p>write us at <a
-        href="mailto:hellowidcy@gmail.com?Subject=Hello%20Widcier"
-                                                       target="_top"> hellowidcy@gmail.com</a></p></div>
+        href="mailto:railsgirls54@gmail.com?Subject=Hello%20Railers"
+                                                       target="_top"> railsgirls54@gmail.com</a></p></div>
 </body>
 <script>
     $(document).ready(function(){
@@ -65,5 +65,4 @@
 </script>
 <script src="js/mailchimp.js"></script>
 <script src="js/uservoice.js"></script>
-<script src="js/mixpanel.js"></script>
 </html>
