--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app>
 <head>
-    <title>Widcy-get inspired</title>
+    <title>RailsGirls in 54 h</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/landingpage.css">
     <link rel="icon" type="image/png" href="img/favicon.png">
