--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app>
 <head>
-    <title>RailsGirls in 54 h</title>
+    <title>Rails Girls 54</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/landingpage.css">
     <link rel="icon" type="image/png" href="img/favicon.png">
@@ -16,23 +16,20 @@
 
 <div id="top-nav" style="height: 60px;" class="sticky-nav nav"  >
     &nbsp;
-    <ul class="nav nav-tabs navbar-fixed-top navex" style=" padding: 10px" data-spy="affix" data-offset-top="100" id="affix">
-        <li class="active"><a href="#why">Why</a></li>
-        <li><a href="#how" >how</a></li>
-        <li><a href="#what" >what</a></li>
-        <li><a href="#team" >team</a></li>
-        <a id="brand" class="brand hide"><img src="img/widcy_logo_orange.png" style="height: 40px; left: 45%; position: absolute;"></a>
+    <ul class="nav nav-tabs navbar-fixed-top navex" style="padding: 10px;" data-spy="affix" data-offset-top="100" id="affix">
+        <li class="active"><a href="#about">About</a></li>
+        <li><a href="#events" >Events</a></li>
+        <li><a href="#program" >Program</a></li>
+        <li><a href="#coaches" >Coaches</a></li>
+        <a id="brand" class="brand hide"><img src="img/railsgirls54-logo.png" style="height: 33px; left: 40%; position: absolute;"></a>
         <button id='join' type="submit" class="btn btn-default pull-right" style="color:red; margin-top: 3px;
         margin-right: 30px;" onclick="checkSubscribe();">Join us</button>
     </ul>
 </div>
-<div id="why" class="row sect" ng-include="'html/why.html'"></div>
-<div id="how" class="row sect" ng-include="'html/how.html'"></div>
-<div id="what" class="row sect" ng-include="'html/what.html'"></div>
-<div id="team" class="row sect" ng-include="'html/team.html'"></div>
-<div style="margin-left: 50px; margin-bottom: 30px"><p>write us at <a
-        href="mailto:railsgirls54@gmail.com?Subject=Hello%20Railers"
-                                                       target="_top"> railsgirls54@gmail.com</a></p></div>
+<div id="about" class="row sect" ng-include="'html/about.html'"></div>
+<div id="events" class="row sect" ng-include="'html/events.html'"></div>
+<div id="program" class="row sect" ng-include="'html/program.html'"></div>
+<div id="coaches" class="row sect" ng-include="'html/coaches.html'"></div>
 </body>
 <script>
     $(document).ready(function(){
