--- a/landingpage/html/coaches.html
+++ b/landingpage/html/coaches.html
@@ -1,4 +1,4 @@
-<div  class="col-mid-12 col-centered" style="max-width: 600px; padding-top:25px">
+<div  class="col-mid-12 col-centered" style="max-width: 600px; padding-top:25px; margin-bottom: 100px">
     <div  class="col-mid-2 teampic">
         <!-- <img src="../img/team/teampictures_david.png" style="max-width: 100px"/> -->
         <img src="img/team/teampictures_david.png" style="max-width: 100px"/>
