--- a/landingpage/html/about.html
+++ b/landingpage/html/about.html
@@ -1,8 +1,8 @@
 <div class="col-mid-12 col-centered" style="top:200px; max-width: 500px; padding-top:25px">
 
   <!-- <h2>About</h2> -->
-
-  <p><strong>Rails Girls 54</strong> is a workshop event held in Bolzano, Innsbruck and Trento.</p>
+  <img style="margin-bottom: 30px" src="img/railsgirls54-logo2.png"/>
+  <p>a workshop event held in Bolzano, Innsbruck and Trento.</p>
   <p>Founded by the idea of <a href="http://railsgirls.com/">Rails Girls</a>
   it's aim is to bring the tools and the technology in the hands of women so
   that they can build their own ideas.</p>
