fixed ul.events... wtf

--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -16,7 +16,8 @@
 
 <div id="top-nav" style="height: 60px;" class="sticky-nav nav"  >
     &nbsp;
-    <ul class="nav nav-tabs navbar-fixed-top navex" style="padding: 10px;" data-spy="affix" data-offset-top="100" id="affix">
+    <ul data-spy="affix" class="nav nav-tabs navbar-fixed-top navex" style="padding: 10px;"  data-offset-top="100"
+        id="affix">
         <li class="active"><a href="#about">About</a></li>
         <li><a href="#events" >Events</a></li>
         <li><a href="#program" >Program</a></li>
