--- a/landingpage/html/events.html
+++ b/landingpage/html/events.html
@@ -1,4 +1,4 @@
-<div  class="col-mid-12 col-centered" style="height: 900px; max-width: 768px; padding-top:25px">
+<div  class="col-mid-12 col-centered" style="height: 900px; max-width: 600px; padding-top:25px">
 
   <section class='schedule home-item' id='schedule'>
     <div class='section-container'>
@@ -8,8 +8,8 @@
           <h3>Bolzano</h3>
           <ul class='events'>
             <li>
-              <p><time>Friday, May 09 - Sunday, May 11</time>
-              <br />Free University of Bolzano</p>
+              <p><time>Friday, May 09 - Sunday, May 11</time></p>
+              <p>Free University of Bolzano</p>
             </li>
           </ul>
         </div>
@@ -17,8 +17,8 @@
           <h3>Innsbruck</h3>
           <ul class='events'>
             <li>
-              <p><time>Friday, May 16 - Sunday, May 18</time>
-              <br />Place TBD</p>
+              <p><time>Friday, May 16 - Sunday, May 18</time></p>
+              <p>Place TBD</p>
             </li>
           </ul>
         </div>
@@ -26,8 +26,8 @@
           <h3>Trento</h3>
           <ul class='events'>
             <li>
-              <p><time>Friday, May 23 - Sunday, May 25</time>
-              <br />Place TBD</p>
+              <p><time>Friday, May 23 - Sunday, May 25</time></p>
+              <p>Place TBD</p>
             </li>
           </ul>
         </div>
