--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -2,6 +2,7 @@
 <html ng-app>
 <head>
     <title>Rails Girls 54</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/landingpage.css">
     <link rel="icon" type="image/png" href="img/favicon.png">
