--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -1,68 +1,47 @@
 <!DOCTYPE html>
 <html ng-app>
-<head>
-    <title>Rails Girls 54</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/landingpage.css">
-    <link rel="icon" type="image/png" href="img/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Asap:400italic,400,700italic,700" rel="stylesheet" type="text/css">
-    <link href="https://cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
-    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
-    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-</head>
-<body data-spy="scroll" data-target=".navbar-top" >
-<div id="mc_embed_signup" class="hide sect_register" ng-include="'html/mailchimp.html'"></div>
-
-<div style="height: 60px;" class="sticky-nav nav navbar-top"  >
-    &nbsp;
-    <ul  class="nav nav-tabs navbar-fixed-top navex" style="padding: 10px;"  data-offset-top="100"
-        >
-        <li class="active"><a href="#about">About</a></li>
-        <li><a href="#events" >Events</a></li>
-        <li><a href="#program" >Program</a></li>
-        <li><a href="#coaches" >Coaches</a></li>
-        <a id="brand" class="brand hide"><img src="img/railsgirls54-logo.png" style="height: 33px; left: 40%; position: absolute;"></a>
-        <button id='join' type="submit" class="btn btn-default pull-right" style="color:red; margin-top: 3px;
-        margin-right: 30px;" onclick="checkSubscribe();">Join us</button>
-    </ul>
-</div>
-<div id="about" class="row sect" ng-include="'html/about.html'"></div>
-<div id="events" class="row sect" ng-include="'html/events.html'"></div>
-<div id="program" class="row sect" ng-include="'html/program.html'"></div>
-<div id="coaches" class="row sect" ng-include="'html/coaches.html'"></div>
-</body>
-<script>
-    $('body').scrollspy({ target: '.navbar-top' });
-    $(document).ready(function(){
-        $(".navbar-top ul li a[href^='#']").on('click', function(e) {
-            e.preventDefault();
-            $('html, body').animate({ scrollTop: $(this.hash).offset().top }, 300);
-            // edit: Opera and IE requires the "html" elm. animated
-        });
-
-        window.onscroll = function(event)
-        {
-            if (window.pageYOffset < 300)
-            {
-
-                $('#brand').prop('class','hide brand');
-            }
-            else{
-                $('#brand').removeAttr('class');
-            }
-        };
-    });
-    function checkSubscribe(){
-        scrollTo(0,0);
-        if($('#mc_embed_signup').hasClass('hide')){
-            $('#mc_embed_signup').removeAttr('class');
-            $('#mc_embed_signup').prop('class','sect_register');
-        }
-        $('#mce-EMAIL').focus();
-    }
-</script>
-<script src="js/mailchimp.js"></script>
-<script src="js/uservoice.js"></script>
+	<head>
+		<title>Rails Girls 54</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		<link rel="stylesheet" href="css/bootstrap.css">
+		<link rel="stylesheet" href="css/landingpage.css">
+		<link rel="icon" type="image/png" href="img/favicon.png">
+		<link href="https://fonts.googleapis.com/css?family=Asap:400italic,400,700italic,700" rel="stylesheet" type="text/css">
+		<link href="https://cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+	</head>
+	
+	<body data-spy="scroll" data-target="#header">
+		<div id="mc_embed_signup" class="sect_register" ng-include="'html/mailchimp.html'"></div>
+		
+		<div id="header" class="navbar navbar-fixed-top">
+			
+			<ul id="navigation" class="nav nav-tabs navigation" data-offset-top="100">
+				<li class="active"><a href="#about">About</a></li>
+				<li><a href="#events">Events</a></li>
+				<li><a href="#program">Program</a></li>
+				<li><a href="#coaches">Coaches</a></li>
+			</ul>
+			
+			<div id="brand" class="brand">
+				<img src="img/railsgirls54-logo.png" alt="RailsGirls54 logo">
+			</div>
+			
+			<div id="joiner">
+				<button id="join" type="submit" class="btn btn-default">Join us</button>
+			</div>
+			
+		</div>
+		
+		<div id="about" class="row sect" ng-include="'html/about.html'"></div>
+		<div id="events" class="row sect" ng-include="'html/events.html'"></div>
+		<div id="program" class="row sect" ng-include="'html/program.html'"></div>
+		<div id="coaches" class="row sect" ng-include="'html/coaches.html'"></div>
+		
+		<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
+		<script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+		<script src="js/mailchimp.js"></script>
+		<script src="js/uservoice.js"></script>
+		<script src="js/script.js"></script>
+	</body>
 </html>
