--- a/landingpage/html/about.html
+++ b/landingpage/html/about.html
@@ -1,19 +1,20 @@
 <div class="col-mid-12 col-centered" style="top:200px; max-width: 500px; padding-top:25px">
 
-  <!-- <h2>About</h2> -->
-  <img style="margin-bottom: 30px" src="img/railsgirls54-logo2.png"/>
-  <p>a workshop event held in Bolzano, Innsbruck and Trento.</p>
-  <p>Founded by the idea of <a href="http://railsgirls.com/">Rails Girls</a>
-  it's aim is to bring the tools and the technology in the hands of women so
-  that they can build their own ideas.</p>
-  <blockquote cite="http://railsgirls.com/">
-    Learn sketching, prototyping, basic programming and get introduced to the
-    world of technology. Rails Girls was born in Finland, but is nowadays a
-    global, non-profit volunteer community.
-  </blockquote>
-  <div style="margin-left: 0px; margin-bottom: 0px"><p>Write us at
-    <a href="mailto:railsgirls54@gmail.com?Subject=Hello%20Railers" target="_top">
-    railsgirls54@gmail.com</a></p>
-  </div>
+	<!-- <h2>About</h2> -->
+	<img style="margin-bottom: 30px" src="img/railsgirls54-logo2.png"/>
+	<p>a workshop event held in Bolzano, Innsbruck and Trento.</p>
+	<p>Founded by the idea of <a href="http://railsgirls.com/" target="_blank">Rails Girls</a>
+		it's aim is to bring the tools and the technology in the hands of women so
+		that they can build their own ideas.</p>
+	<blockquote cite="http://railsgirls.com/">
+		Learn sketching, prototyping, basic programming and get introduced to the
+		world of technology. Rails Girls was born in Finland, but is nowadays a
+		global, non-profit volunteer community.
+	</blockquote>
+	<div style="margin-left: 0px; margin-bottom: 0px">
+		<p>Write us at
+			<a href="mailto:railsgirls54@gmail.com?Subject=Hello%20Railers" target="_top">railsgirls54@gmail.com</a>
+		</p>
+	</div>
 
 </div>
