--- a/landingpage/html/coaches.html
+++ b/landingpage/html/coaches.html
@@ -1,34 +1,31 @@
 <div  class="col-mid-12 col-centered" style="max-width: 600px; padding-top:25px; margin-bottom: 100px">
-    <div  class="col-mid-2 teampic">
-        <!-- <img src="../img/team/teampictures_david.png" style="max-width: 100px"/> -->
-        <img src="img/team/teampictures_david.png" style="max-width: 100px"/>
+    <div  class="col-mid-2 team-member">
+        <img src="img/team/teampictures_david.jpg" style="max-width: 100px"/>
         <div class="team-detail" style="display: inline-block;">
-          <h3>DAVID</h3>
-          <p>1st Year Bachelor in Computer Science and Engineering</p>
+			<h3>David</h3>
+			<p>Webdeveloper</p>
+			<p>1st Year Bachelor in Computer Science and Engineering</p>
         </div>
     </div>
-    <div  class="col-mid-2 teampic">
-        <!-- <img src="../img/team/teampictures_alex.png" style="max-width: 100px"/> -->
+    <div  class="col-mid-2 team-member">
         <img src="img/team/teampictures_alex.png" style="max-width: 100px"/>
         <div class="team-detail">
-          <h3>ALEX</h3>
-          <p>3rd Year Bachelor in Computer Science and Engineering</p>
+			<h3>Alex</h3>
+			<p>3rd Year Bachelor in Computer Science and Engineering</p>
         </div>
     </div>
-    <div  class="col-mid-2 teampic">
-        <!-- <img src="../img/team/teampictures_carmine.png" style="max-width: 100px"/> -->
+    <div  class="col-mid-2 team-member">
         <img src="img/team/teampictures_carmine.png" style="max-width: 100px"/>
         <div class="team-detail">
-          <h3>CARMINE</h3>
-          <p>PhD in Computer Science</p>
+			<h3>Carmine</h3>
+			<p>PhD in Computer Science</p>
         </div>
     </div>
-    <div  class="col-mid-2 teampic">
-        <!-- <img src="../img/team/teampictures_julian.png" style="max-width: 100px"/> -->
+    <div  class="col-mid-2 team-member">
         <img src="img/team/teampictures_julian.png" style="max-width: 100px"/>
         <div class="team-detail">
-          <h3>JULIAN</h3>
-          <p>3rd Year Bachelor in Computer Science and Engineering</p>
+			<h3>Julian</h3>
+			<p>3rd Year Bachelor in Computer Science and Engineering</p>
         </div>
     </div>
 
