Added voluntier & preregister text to landing page

--- a/landingpage/html/about.html
+++ b/landingpage/html/about.html
@@ -1,4 +1,4 @@
-<div class="col-mid-12 col-centered" style="top:200px; max-width: 500px; padding-top:25px">
+<div class="col-mid-12 col-centered" style="top:200px; max-width: 1200px; padding-top:25px">
 
 	<!-- <h2>About</h2> -->
 	<img style="margin-bottom: 30px" src="img/railsgirls54-logo2.png"/>
@@ -12,9 +12,17 @@
 		global, non-profit volunteer community.
 	</blockquote>
 	<div style="margin-left: 0px; margin-bottom: 0px">
-		<p>Write us at
+      <h3>Call for Volunteers</h3>
+      <p>You can help us at our work on the event. Simply send us an email via
+        <a href="mailto:info@railsgirls54.com?Subject=I%20want%20to%20be%20a%20volunteer" target="_top">
+          info@railsgirls54.com</a>.</p>
+      <h3>Preregister Now</h3>
+      <p>Be the first girl to join our events.
+        There are a maximum of 54 places per event.</p>
+    
+		<!-- <p>Write us at
 			<a href="mailto:railsgirls54@gmail.com?Subject=Hello%20Railers" target="_top">railsgirls54@gmail.com</a>
-		</p>
+		</p> -->
 	</div>
 
 </div>
