Mailchimp form opens on content link

--- a/landingpage/html/about.html
+++ b/landingpage/html/about.html
@@ -17,7 +17,7 @@
         <a href="mailto:info@railsgirls54.com?Subject=I%20want%20to%20be%20a%20volunteer" target="_top">
           info@railsgirls54.com</a>.</p>
       <h3>Preregister Now</h3>
-      <p>Be the first girl to join our events.
+      <p>Be the first girl to <a href="#" title="join Rails Girls 54" class="join">join our events</a>.
         There are a maximum of 54 places per event.</p>
     
 		<!-- <p>Write us at
