--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -27,7 +27,7 @@
 			</div>
 			
 			<div id="joiner">
-				<button id="join" type="submit" class="btn btn-default">Join us</button>
+				<button id="join" type="submit" class="join btn btn-default">Join us</button>
 			</div>
 			
 		</div>
