Updated about, renamed 'Coaches' into 'Team'

--- a/landingpage/html/about.html
+++ b/landingpage/html/about.html
@@ -2,27 +2,27 @@
 
 	<!-- <h2>About</h2> -->
 	<img style="margin-bottom: 30px" src="img/railsgirls54-logo2.png"/>
-	<p>a workshop event held in Bolzano, Innsbruck and Trento.</p>
-	<p>Founded by the idea of <a href="http://railsgirls.com/" target="_blank">Rails Girls</a>
-		it's aim is to bring the tools and the technology in the hands of women so
-		that they can build their own ideas.</p>
+	<p>
+		Rails Girls 54 is a project by the Free University of Bolzano to bring the Rails Girls initiative to Bolzano, Innsbruck and Trento.<br />
+		Based on the idea of <a href="http://railsgirls.com/" target="_blank">Rails Girls</a> we are bringing tools and knowledge to your city so that you can realize your idea.
+	</p>
 	<blockquote cite="http://railsgirls.com/">
 		Learn sketching, prototyping, basic programming and get introduced to the
 		world of technology. Rails Girls was born in Finland, but is nowadays a
 		global, non-profit volunteer community.
 	</blockquote>
 	<div style="margin-left: 0px; margin-bottom: 0px">
+      <h3>Join Now</h3>
+      <p>
+		Get updates on the events and <a href="#" title="join Rails Girls 54" class="join">join Rails Girls 54</a>.
+	  </p>
+      <h3>Bolzano is calling &hearts;</h3>
+	  <p>
+		  The registration for the Bolzano session is now open. There are only 20 places available so hurry up and <a href="http://tinyurl.com/railsgirls54-bolzano" title="Register for RG54 in Bolzano" target="_blank">register now!</a>
+	  </p>
       <h3>Call for Volunteers</h3>
-      <p>You can help us at our work on the event. Simply send us an email via
-        <a href="mailto:info@railsgirls54.com?Subject=I%20want%20to%20be%20a%20volunteer" target="_top">
-          info@railsgirls54.com</a>.</p>
-      <h3>Preregister Now</h3>
-      <p>Be the first girl to <a href="#" title="join Rails Girls 54" class="join">join our events</a>.
-        There are a maximum of 54 places per event.</p>
-    
-		<!-- <p>Write us at
-			<a href="mailto:railsgirls54@gmail.com?Subject=Hello%20Railers" target="_top">railsgirls54@gmail.com</a>
-		</p> -->
+		<p>
+			You can help us at our work on the event. Simply send us an email via <a href="mailto:info@railsgirls54.com?Subject=I%20want%20to%20be%20a%20volunteer" target="_top">info@railsgirls54.com</a>.
+		</p>
 	</div>
-
 </div>
