--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -19,7 +19,7 @@
 				<li class="active"><a href="#about">About</a></li>
 				<li><a href="#events">Events</a></li>
 				<li><a href="#program">Program</a></li>
-				<li><a href="#coaches">Coaches</a></li>
+				<li><a href="#team">Team</a></li>
 			</ul>
 			
 			<div id="brand" class="brand">
@@ -35,7 +35,7 @@
 		<div id="about" class="row sect" ng-include="'html/about.html'"></div>
 		<div id="events" class="row sect" ng-include="'html/events.html'"></div>
 		<div id="program" class="row sect" ng-include="'html/program.html'"></div>
-		<div id="coaches" class="row sect" ng-include="'html/coaches.html'"></div>
+		<div id="team" class="row sect" ng-include="'html/coaches.html'"></div>
 		
 		<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
