Team page updated

--- a/landingpage/html/coaches.html
+++ b/landingpage/html/coaches.html
@@ -1,31 +1,62 @@
 <div  class="col-mid-12 col-centered" style="max-width: 600px; padding-top:25px; margin-bottom: 100px">
+	
     <div  class="col-mid-2 team-member">
-        <img src="img/team/teampictures_david.jpg" style="max-width: 100px"/>
-        <div class="team-detail" style="display: inline-block;">
-			<h3>David</h3>
-			<p>Webdeveloper</p>
-			<p>1st Year Bachelor in Computer Science and Engineering</p>
-        </div>
-    </div>
-    <div  class="col-mid-2 team-member">
-        <img src="img/team/teampictures_alex.png" style="max-width: 100px"/>
+        <img src="img/team/team_alex.jpg" style="max-width: 100px"/>
         <div class="team-detail">
 			<h3>Alex</h3>
-			<p>3rd Year Bachelor in Computer Science and Engineering</p>
+			<p>
+				Alex is well known for eating: once he starts, nobody can stop him - he's a gourmet! During the daytime he studies the science of computers, while in the night he wears the headphones and rocks the clubs as a DJ.
+			</p>
         </div>
     </div>
+	
     <div  class="col-mid-2 team-member">
         <img src="img/team/teampictures_carmine.png" style="max-width: 100px"/>
         <div class="team-detail">
 			<h3>Carmine</h3>
-			<p>PhD in Computer Science</p>
+			<p>
+				Wake up; Kick butt; Repeat. In the meantime he likes coding and designing too.
+			</p>
         </div>
     </div>
+	
     <div  class="col-mid-2 team-member">
-        <img src="img/team/teampictures_julian.png" style="max-width: 100px"/>
+        <img src="img/team/team_david.jpg" style="max-width: 100px"/>
+        <div class="team-detail">
+			<h3>David</h3>
+			<p>
+				David loves music. And photography. And BBQ. And dogs. And occasionally he even touches a computer.
+			</p>
+        </div>
+    </div>
+	
+    <div  class="col-mid-2 team-member">
+        <img src="img/team/team_julian.jpg" style="max-width: 100px"/>
         <div class="team-detail">
 			<h3>Julian</h3>
-			<p>3rd Year Bachelor in Computer Science and Engineering</p>
+			<p>
+				Julian loves the nature and the sun: once he is outdoors from the computer science labs he likes to hike around in the mountains or can be found on a fixed-rope trail. Nobody can stop him to jump in the water if a lake is around.
+			</p>
+        </div>
+    </div>
+
+    <div  class="col-mid-2 team-member">
+        <img src="img/team/team_pekka.jpg" style="max-width: 100px"/>
+        <div class="team-detail">
+			<h3>Pekka</h3>
+			<p>
+				Pekka is a known chef and an experienced fisherman but also acts as a dean of the faculty and a professor of computer science.
+			</p>
+        </div>
+    </div>
+
+    <div  class="col-mid-2 team-member">
+        <img src="img/team/team_sven.jpg" style="max-width: 100px"/>
+        <div class="team-detail">
+			<h3>Sven</h3>
+			<p>
+				Swedish name, German citizenship, Italian residence, and British-style humor: Sven is now a professor of computer science in South Tyrol.
+			</p>
         </div>
     </div>
 
