Modification on team

--- a/landingpage/html/coaches.html
+++ b/landingpage/html/coaches.html
@@ -11,7 +11,7 @@
     </div>
 	
     <div  class="col-mid-2 team-member">
-        <img src="img/team/teampictures_carmine.png" style="max-width: 100px"/>
+        <img src="img/team/team_carmine.jpg" style="max-width: 100px"/>
         <div class="team-detail">
 			<h3>Carmine</h3>
 			<p>
