fixed Carmine description

--- a/landingpage/html/coaches.html
+++ b/landingpage/html/coaches.html
@@ -1,5 +1,6 @@
 <div  class="col-mid-12 col-centered" style="max-width: 600px; padding-top:25px; margin-bottom: 100px">
-	
+    <h2><div class='title'>Team</div></h2>
+    <br>
     <div  class="col-mid-2 team-member">
         <img src="img/team/team_alex.jpg" style="max-width: 100px"/>
         <div class="team-detail">
@@ -15,7 +16,7 @@
         <div class="team-detail">
 			<h3>Carmine</h3>
 			<p>
-				Wake up; Kick butt; Repeat. In the meantime he likes coding and designing too.
+				Wake_up(); Have_fun(); Repeat(); In the meantime he likes coding and designing too.
 			</p>
         </div>
     </div>
