--- a/landingpage/html/about.html
+++ b/landingpage/html/about.html
@@ -16,7 +16,7 @@
       <p>
 		Get updates on the events and <a href="#" title="join Rails Girls 54" class="join">join Rails Girls 54</a>.
 	  </p>
-      <h3>Bolzano is calling &hearts;</h3>
+      <h3>Bolzano is calling &hearts; (from Friday, May 09 to Sunday, May 11, at the Free University of Bolzano)</h3>
 	  <p>
 		  The registration for the Bolzano session is now open. There are only 20 places available so hurry up and <a href="http://tinyurl.com/railsgirls54-bolzano" title="Register for RG54 in Bolzano" target="_blank">register now!</a>
 	  </p>
