--- a/landingpage/html/about.html
+++ b/landingpage/html/about.html
@@ -14,12 +14,14 @@
 	<div style="margin-left: 0px; margin-bottom: 0px">
 		<h3>Join Now</h3>
 		<p>
-			Get updates on the events and <a href="#" title="join Rails Girls 54" class="join">join Rails Girls 54</a>.
+			Get updates on the events and <a href="#" title="join Rails Girls 54" class="join">join Rails Girls 54</a> or &hearts; us on <a href="https://www.facebook.com/railsgirls54" target="_blank" title="RG54 on Facebook">Facebook</a>.
 		</p>
+		
 		<h3>Bolzano is calling &hearts;</h3>
 		<p>
 			Registration for the Bolzano session is now open. The event takes place from Friday, May 09 to Sunday, May 11 at the Free University of Bolzano. There are only 20 places available so hurry up and <a href="http://tinyurl.com/railsgirls54-bolzano" title="Register for RG54 in Bolzano" target="_blank">register now!</a>
 		</p>
+		
 		<h3>Call for Volunteers</h3>
 		<p>
 			You can help us at our work on the event. Simply send us an email via <a href="mailto:info@railsgirls54.com?Subject=I%20want%20to%20be%20a%20volunteer" target="_top">info@railsgirls54.com</a>.
