Major changes in content and stzle

--- a/landingpage/html/events.html
+++ b/landingpage/html/events.html
@@ -1,39 +1,22 @@
-<div  class="col-mid-12 col-centered" style="height: 600px; max-width: 600px; padding-top:25px">
-
-  <section class='schedule home-item' id='schedule'>
-    <div class='section-container'>
-      <header><div class='title'>Events</div></header>
-      <div class='section-content'>
-        <div class='timeframe' id='bolzano'>
-          <h3>Bolzano</h3>
-          <ul class='events'>
-            <li>
-              <p><time>Friday, May 09 - Sunday, May 11</time></p>
-              <p>Free University of Bolzano</p>
-            </li>
-          </ul>
-        </div>
-        <div class='timeframe alt' id='innsbruck'>
-          <h3>Innsbruck</h3>
-          <ul class='events'>
-            <li>
-              <p><time>Friday, May 16 - Sunday, May 18</time></p>
-              <p>Place TBD</p>
-            </li>
-          </ul>
-        </div>
-        <div class='timeframe' id='trento'>
-          <h3>Trento</h3>
-          <ul class='events'>
-            <li>
-              <p><time>Friday, May 23 - Sunday, May 25</time></p>
-              <p>Place TBD</p>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="clear"></div>
-  </section>
-
+<h2>Events</h2>
+<div class="event col-md-4">
+	<h3>Bolzano</h3>
+	<time>Friday, May 09 - Sunday, May 11</time>
+	<p class="location">
+		Free University of Bolzano-Bozen
+	</p>
+</div>
+<div class="event col-md-4">
+	<h3>Innsbruck</h3>
+	<time>Friday, May 16 - Sunday, May 18</time>
+	<p class="location">
+		University of Innsbruck
+	</p>
+</div>
+<div class="event col-md-4">
+	<h3>Trento</h3>
+	<time>Friday, May 23 - Sunday, May 25</time>
+	<p class="location">
+		University of Trento
+	</p>
 </div>
