--- a/landingpage/html/about.html
+++ b/landingpage/html/about.html
@@ -1,30 +1,34 @@
-<div class="col-mid-12 col-centered" style="top:200px; max-width: 1200px; padding-top:25px">
-
-	<!-- <h2>About</h2> -->
-	<img style="margin-bottom: 30px" src="img/railsgirls54-logo2.png"/>
+<img style="margin-bottom: 30px" src="img/railsgirls54-logo2.png"/>
+<p>
+	Rails Girls 54 is a project by the Free University of Bolzano to bring the Rails Girls initiative to the Free University of Bolzano, the University of Innsbruck and the University of Trento.
+</p>
+<p>
+	Based on the idea of <a href="http://railsgirls.com/" target="_blank">Rails Girls</a> we are bringing tools and knowledge to your city so that you can realize your idea.
+</p>
+<blockquote cite="http://railsgirls.com/">
+	Learn sketching, prototyping, basic programming and get introduced to the
+	world of technology. Rails Girls was born in Finland, but is nowadays a
+	global, non-profit volunteer community.
+</blockquote>
+<div style="margin-left: 0px; margin-bottom: 0px">
+	<h3>Join</h3>
 	<p>
-		Rails Girls 54 is a project by the Free University of Bolzano to bring the Rails Girls initiative to Bolzano, Innsbruck and Trento.<br />
-		Based on the idea of <a href="http://railsgirls.com/" target="_blank">Rails Girls</a> we are bringing tools and knowledge to your city so that you can realize your idea.
+		Never miss an update and like us on <a class="btn btn-default btn-sm btn-facebook" href="https://www.facebook.com/railsgirls54" target="_blank" title="rg54 on Facebook">&hearts; Facebook &hearts;</a>.
+		We will publish news and information there so don't forget to like us.
+
 	</p>
-	<blockquote cite="http://railsgirls.com/">
-		Learn sketching, prototyping, basic programming and get introduced to the
-		world of technology. Rails Girls was born in Finland, but is nowadays a
-		global, non-profit volunteer community.
-	</blockquote>
-	<div style="margin-left: 0px; margin-bottom: 0px">
-		<h3>Join Now</h3>
-		<p>
-			Get updates on the events and <a href="#" title="join Rails Girls 54" class="join">join Rails Girls 54</a> or &hearts; us on <a href="https://www.facebook.com/railsgirls54" target="_blank" title="RG54 on Facebook">Facebook</a>.
-		</p>
-		
-		<h3>Bolzano is calling &hearts;</h3>
-		<p>
-			Registration for the Bolzano session is now open. The event takes place from Friday, May 09 to Sunday, May 11 at the Free University of Bolzano. There are only 20 places available so hurry up and <a href="http://tinyurl.com/railsgirls54-bolzano" title="Register for RG54 in Bolzano" target="_blank">register now!</a>
-		</p>
-		
-		<h3>Call for Volunteers</h3>
-		<p>
-			You can help us at our work on the event. Simply send us an email via <a href="mailto:info@railsgirls54.com?Subject=I%20want%20to%20be%20a%20volunteer" target="_top">info@railsgirls54.com</a>.
-		</p>
-	</div>
+
+	<h3>Bolzano is calling</h3>
+	<p>
+		Wow, what a surprise! Bolzano was sold out in a couple of minutes and the 20 places were gone in a rush.
+		However, we switched over to a waiting list registration so if a spot clears up it might be yours!
+	</p>
+	<p>
+		<a href="http://tinyurl.com/railsgirls54-bolzano" title="Register for RG54 in Bolzano" target="_blank">Register to the waiting list here</a>
+	</p>
+
+	<h3>Call for Volunteers</h3>
+	<p>
+		Rails Girls 54 is a huge success. And huge means we need your help. Don't hesitate, simply send us an email to <a href="mailto:info@railsgirls54.com?Subject=I%20want%20to%20be%20a%20volunteer" target="_top">info@railsgirls54.com</a>.
+	</p>
 </div>
