--- a/landingpage/html/program.html
+++ b/landingpage/html/program.html
@@ -1,118 +1,126 @@
-<div  class="col-mid-12 col-centered" style="height: 900px; max-width: 768px; padding-top:25px">
-    
-  <section class='schedule home-item' id='schedule'>
-    <div class='section-container'>
-      <header><div class='title'>Program</div></header>
-      <div class='section-content'>
-        <div class='day' id='friday'>
-          <h3>Friday</h3>
-          <ul class='events'>
-            <li>
-              <time>6:00pm</time>
-              <span>Welcome!</span>
-            </li>
-            <li>
-              <time>6:30pm</time>
-              <span>Motivational Talk</span>
-            </li>
-            <li>
-              <time>7:00pm</time>
-              <span>Show Off</span>
-            </li>
-            <li>
-              <time>7:45pm</time>
-              <span>Software Installation</span>
-            </li>
-            <li>
-              <time>8:45pm</time>
-              <span>Break</span>
-            </li>
-            <li>
-              <time>9:00pm</time>
-              <span>First Ruby on Rails App</span>
-            </li>
-            <li>
-              <time>10:00pm</time>
-              <span>Venue closes</span>
-            </li>
-          </ul>
-        </div>
-        <div class='day alt' id='saturday'>
-          <h3>Saturday</h3>
-          <ul class='events'>
-            <li>
-              <time>10:00am</time>
-              <span>Good morning!</span>
-            </li>
-            <li>
-              <time>10:30am</time>
-              <span>Recap</span>
-            </li>
-            <li>
-              <time>11:00am</time>
-              <span>Team building &amp; Socialization</span>
-            </li>
-            <li>
-              <time>12:00pm</time>
-              <span>Idea Presentation</span>
-            </li>
-            <li>
-              <time>12:30pm</time>
-              <span>Lunch</span>
-            </li>
-            <li>
-              <time>1:30pm</time>
-              <span>Web Workshop</span>
-            </li>
-            <li>
-              <time>TBD</time>
-              <span>Ruby Basics</span>
-            </li>
-            <li>
-              <time>TBD</time>
-              <span>MVC &amp; Resources</span>
-            </li>
-            <li>
-              <time>6:00pm</time>
-              <span>Venue closes</span>
-            </li>
-          </ul>
-        </div>
-        <div class='day' id='sunday'>
-          <h3>Sunday</h3>
-          <ul class='events'>
-            <li>
-              <time>10:00am</time>
-              <span>Bentobox</span>
-            </li>
-            <li>
-              <time>11:00am</time>
-              <span>View</span>
-            </li>
-            <li>
-              <time>11:30am</time>
-              <span>Controller</span>
-            </li>
-            <li>
-              <time>12:00pm</time>
-              <span>Model</span>
-            </li>
-            <li>
-              <time>12:30pm</time>
-              <span>Lunch</span>
-            </li>
-            <li>
-              <time>1:30pm</time>
-              <span>Workshop Time</span>
-            </li>
-            <li>
-              <time>6:00pm</time>
-              <span>Goodbye!</span>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="clear"></div>
-  </section>
+<h2>Program</h2>
+<div class="day col-sm-4">
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<td colspan="2"><h3>Friday</h3></td>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td><time>18:00</time></td>
+				<td>Welcome</td>
+			</tr>
+			<tr>
+				<td><time>18:30</time></td>
+				<td>Motivational talk</td>
+			</tr>
+			<tr>
+				<td><time>19:00</time></td>
+				<td>Show Off</td>
+			</tr>
+			<tr>
+				<td><time>19:45</time></td>
+				<td>Installation party</td>
+			</tr>
+			<tr>
+				<td><time>20:45</time></td>
+				<td>Break</td>
+			</tr>
+			<tr>
+				<td><time>21:00</time></td>
+				<td>First Ruby Application</td>
+			</tr>
+			<tr>
+				<td><time>22:00</time></td>
+				<td>Venue closes</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+<div class="day col-sm-4">
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<td colspan="2"><h3>Saturday</h3></td>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td><time>10:00</time></td>
+				<td>Good morning!</td>
+			</tr>
+			<tr>
+				<td><time>10:30</time></td>
+				<td>Recap</td>
+			</tr>
+			<tr>
+				<td><time>11:00</time></td>
+				<td>Team building &amp; socialization</td>
+			</tr>
+			<tr>
+				<td><time>12:00</time></td>
+				<td>Idea presentation</td>
+			</tr>
+			<tr>
+				<td><time>12:30</time></td>
+				<td>Lunch</td>
+			</tr>
+			<tr>
+				<td><time>13:30</time></td>
+				<td>Web workshop</td>
+			</tr>
+			<tr>
+				<td><time>TBA</time></td>
+				<td>Ruby Basics</td>
+			</tr>
+			<tr>
+				<td><time>TBA</time></td>
+				<td>MVC &amp; resources</td>
+			</tr>
+			<tr>
+				<td><time>18:00</time></td>
+				<td>Venue closes</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+<div class="day col-sm-4">
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<td colspan="2"><h3>Sunday</h3></td>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td><time>10:00</time></td>
+				<td>Good morning!</td>
+			</tr>
+			<tr>
+				<td><time>11:00</time></td>
+				<td>View</td>
+			</tr>
+			<tr>
+				<td><time>11:30</time></td>
+				<td>Controller</td>
+			</tr>
+			<tr>
+				<td><time>12:00</time></td>
+				<td>Model</td>
+			</tr>
+			<tr>
+				<td><time>12:30</time></td>
+				<td>Lunch</td>
+			</tr>
+			<tr>
+				<td><time>13:30</time></td>
+				<td>Coding time!</td>
+			</tr>
+			<tr>
+				<td><time>18:00</time></td>
+				<td>Goodbye!</td>
+			</tr>
+		</tbody>
+	</table>
 </div>
