Team page modifications

--- a/landingpage/html/team.html
+++ b/landingpage/html/team.html
@@ -27,7 +27,7 @@
 	<img src="img/team/team_dron.jpg"/>
 	<h3>Dron</h3>
 	<p>
-		Dron believes "Food is like Love. It should be entered in abundance or not at all" So he LOVES COOKING more than he loves catering people AND to keep this cycle running, he works on his computer as well!!!
+		Dron believes "Food is like Love. It should be entered in abundance or not at all" So he LOVES COOKING and catering people even more. AND to keep this cycle running, he works on his computer as well!!!
 	</p>
 </div>
 
