Added sponsor logos for preview

--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -27,9 +27,16 @@
 		<div id="team" class="row sect col-md-12 col-centered" ng-include="'html/team.html'"></div>
 
 		<footer id="footer">
-			&hearts; 2014 - Rails Girls 54 - Free University of Bolzano-Bozen
+			<p>
+				&hearts; 2014 - Rails Girls 54 - Free University of Bolzano Bozen
+			</p>
+			<div id="sponsors">
+				<a href="http://www.unibz.it" title="Free University of Bolzano Bozen" target="_blank"><img src="/img/logo_FUB.png" alt="Logo Free University of Bolzano Bozen" /></a>
+				<a href="https://github.com" title="GitHub" target="_blank"><img src="/img/logo_GitHub.png" alt="GitHub" /></a>
+				<a href="http://www.redbull.com" title="Red Bull" target="_blank"><img src="/img/logo_RedBull.png" alt="Red Bull" /></a>
+			</div>
 		</footer>
-		
+
 		<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
 		<script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
