--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -31,7 +31,7 @@
 				&hearts; 2014 - Rails Girls 54 - Free University of Bolzano Bozen
 			</p>
 			<div id="sponsors">
-				<a href="http://www.unibz.it" title="Free University of Bolzano Bozen" target="_blank"><img src="/img/logo_FUB.png" alt="Logo Free University of Bolzano Bozen" /></a>
+				<a href="http://www.unibz.it/en/inf/" title="Faculty of Computer Science - Free University of Bolzano Bozen" target="_blank"><img src="/img/logo_FUB.png" alt="Logo Faculty of Computer Science -  Free University of Bolzano Bozen" /></a>
 				<a href="https://github.com" title="GitHub" target="_blank"><img src="/img/logo_GitHub.png" alt="GitHub" /></a>
 				<a href="http://www.redbull.com" title="Red Bull" target="_blank"><img src="/img/logo_RedBull.png" alt="Red Bull" /></a>
 			</div>
