--- a/landingpage/html/program.html
+++ b/landingpage/html/program.html
@@ -8,6 +8,10 @@
 		</thead>
 		<tbody>
 			<tr>
+				<td><time>17:00</time></td>
+				<td>Registration</td>
+			</tr>
+			<tr>
 				<td><time>18:00</time></td>
 				<td>Welcome</td>
 			</tr>
@@ -20,19 +24,19 @@
 				<td>Show Off</td>
 			</tr>
 			<tr>
-				<td><time>19:45</time></td>
+				<td><time>19:30</time></td>
 				<td>Installation party</td>
 			</tr>
 			<tr>
-				<td><time>20:45</time></td>
-				<td>Break</td>
+				<td><time>20:15</time></td>
+				<td><i>Dinner time!</i></td>
 			</tr>
 			<tr>
 				<td><time>21:00</time></td>
 				<td>First Ruby Application</td>
 			</tr>
 			<tr>
-				<td><time>22:00</time></td>
+				<td><time>22:30</time></td>
 				<td>Venue closes</td>
 			</tr>
 		</tbody>
@@ -56,30 +60,50 @@
 			</tr>
 			<tr>
 				<td><time>11:00</time></td>
-				<td>Team building &amp; socialization</td>
-			</tr>
-			<tr>
-				<td><time>12:00</time></td>
-				<td>Idea presentation</td>
-			</tr>
-			<tr>
-				<td><time>12:30</time></td>
-				<td>Lunch</td>
-			</tr>
-			<tr>
-				<td><time>13:30</time></td>
 				<td>Web workshop</td>
 			</tr>
 			<tr>
-				<td><time>TBA</time></td>
+				<td><time>11:45</time></td>
+				<td><i>Break</i></td>
+			</tr>
+			<tr>
+				<td><time>12:00</time></td>
 				<td>Ruby Basics</td>
 			</tr>
 			<tr>
-				<td><time>TBA</time></td>
-				<td>MVC &amp; resources</td>
+				<td><time>12:45</time></td>
+				<td>Socializing &amp; Teambuilding</td>
 			</tr>
 			<tr>
-				<td><time>18:00</time></td>
+				<td><time>13:30</time></td>
+				<td><i>Lunchtime</i></td>
+			</tr>
+			<tr>
+				<td><time>14:30</time></td>
+				<td>Idea presentation</td>
+			</tr>
+			<tr>
+				<td><time>15:00</time></td>
+				<td><i>Have a break</i></td>
+			</tr>
+			<tr>
+				<td><time>15:15</time></td>
+				<td>Introduction to MVC</td>
+			</tr>
+			<tr>
+				<td><time>16:00</time></td>
+				<td>Bentobox</td>
+			</tr>
+			<tr>
+				<td><time>16:30</time></td>
+				<td>Coding time</td>
+			</tr>
+			<tr>
+				<td><time>19:30</time></td>
+				<td><i>Dinner Time!</i></td>
+			</tr>
+			<tr>
+				<td><time>22:00</time></td>
 				<td>Venue closes</td>
 			</tr>
 		</tbody>
@@ -98,6 +122,10 @@
 				<td>Good morning!</td>
 			</tr>
 			<tr>
+				<td><time>10:30</time></td>
+				<td>Recap</td>
+			</tr>
+			<tr>
 				<td><time>11:00</time></td>
 				<td>View</td>
 			</tr>
@@ -111,15 +139,19 @@
 			</tr>
 			<tr>
 				<td><time>12:30</time></td>
-				<td>Lunch</td>
+				<td><i>Lunchtime</i></td>
 			</tr>
 			<tr>
 				<td><time>13:30</time></td>
 				<td>Coding time!</td>
 			</tr>
 			<tr>
+				<td><time>16:30</time></td>
+				<td>Your time to show off</td>
+			</tr>
+			<tr>
 				<td><time>18:00</time></td>
-				<td>Goodbye!</td>
+				<td>Goodbye</td>
 			</tr>
 		</tbody>
 	</table>
