--- a/landingpage/index.html
+++ b/landingpage/index.html
@@ -33,6 +33,7 @@
 			<div id="sponsors">
 				<a href="http://www.unibz.it/en/inf/" title="Faculty of Computer Science - Free University of Bolzano Bozen" target="_blank"><img src="/img/logo_FUB.png" alt="Logo Faculty of Computer Science -  Free University of Bolzano Bozen" /></a>
 				<a href="https://github.com" title="GitHub" target="_blank"><img src="/img/logo_GitHub.png" alt="GitHub" /></a>
+				<a href="http://pizzacall.it" title="Pizza Call" target="_blank"><img src="/img/logo_PizzaCall.png" alt="Pizza Call" /></a>
 			</div>
 		</footer>
 
