Added 'helper' paragraph with Gianluca

--- a/landingpage/html/team.html
+++ b/landingpage/html/team.html
@@ -1,56 +1,74 @@
 <h2>Team</h2>
 <div  class="col-mid-2 team-member">
 	<img src="img/team/team_alex.jpg"/>
-	<h3>Alex</h3>
-	<p>
+	<p class="name">Alex</p>
+	<p class="pickup">
 		Alex is well known for eating: once he starts, nobody can stop him - he's a gourmet! During the daytime he studies the science of computers, while in the night he wears the headphones and rocks the clubs as a DJ.
 	</p>
 </div>
 
 <div  class="col-mid-2 team-member">
 	<img src="img/team/team_carmine.jpg"/>
-	<h3>Carmine</h3>
-	<p>
+	<p class="name">Carmine</p>
+	<p class="pickup">
 		Wake_up(); Have_fun(); Repeat(); In the meantime he likes coding and designing too.
 	</p>
 </div>
 
 <div  class="col-mid-2 team-member">
 	<img src="img/team/team_david.jpg"/>
-	<h3>David</h3>
-	<p>
+	<p class="name">David</p>
+	<p class="pickup">
 		David loves music. And photography. And BBQ. And dogs. And occasionally he even touches a computer.
 	</p>
 </div>
 
 <div  class="col-mid-2 team-member">
 	<img src="img/team/team_dron.jpg"/>
-	<h3>Dron</h3>
-	<p>
+	<p class="name">Dron</p>
+	<p class="pickup">
 		Dron believes "Food is like Love. It should be entered in abundance or not at all" So he LOVES COOKING and catering people even more. AND to keep this cycle running, he works on his computer as well!!!
 	</p>
 </div>
 
 <div  class="col-mid-2 team-member">
 	<img src="img/team/team_julian.jpg"/>
-	<h3>Julian</h3>
-	<p>
+	<p class="name">Julian</p>
+	<p class="pickup">
 		Julian loves the nature and the sun: once he is outdoors from the computer science labs he likes to hike around in the mountains or can be found on a fixed-rope trail. Nobody can stop him to jump in the water if a lake is around.
 	</p>
 </div>
 
 <div  class="col-mid-2 team-member">
 	<img src="img/team/team_pekka.jpg"/>
-	<h3>Pekka</h3>
-	<p>
+	<p class="name">Pekka</p>
+	<p class="pickup">
 		Pekka is a known chef and an experienced fisherman but also acts as a dean of the faculty and a professor of computer science.
 	</p>
 </div>
 
 <div  class="col-mid-2 team-member">
 	<img src="img/team/team_sven.jpg"/>
-	<h3>Sven</h3>
-	<p>
+	<p class="name">Sven</p>
+	<p class="pickup">
 		Swedish name, German citizenship, Italian residence, and British-style humor: Sven is now a professor of computer science in South Tyrol.
+	</p>
+</div>
+
+<h3>Helper</h3>
+
+<!--<div  class="col-mid-2 team-member helper">
+	<img src="img/team/team_ermanno/>
+	<p class="name">Ermanno</p>
+	<p class="pickup">
+		
+	</p>
+</div>-->
+
+<div  class="col-mid-2 team-member helper">
+	<img src="img/team/team_gianluca.jpg"/>
+	<p class="name">Gianluca</p>
+	<p class="pickup">
+		Snowboarder, coder, recovering TV shows addict and avid language learner: Gianluca spends his free time planning his next trip and reading waaay too many books
 	</p>
 </div>
