--- a/landingpage/html/team.html
+++ b/landingpage/html/team.html
@@ -57,18 +57,34 @@
 
 <h3>Helper</h3>
 
-<!--<div  class="col-mid-2 team-member helper">
-	<img src="img/team/team_ermanno/>
+<div  class="col-mid-2 team-member helper">
+	<img src="img/team/team_ermanno.jpg"/>
 	<p class="name">Ermanno</p>
 	<p class="pickup">
-		
+		Pick up line loading...
 	</p>
-</div>-->
+</div>
 
 <div  class="col-mid-2 team-member helper">
 	<img src="img/team/team_gianluca.jpg"/>
 	<p class="name">Gianluca</p>
 	<p class="pickup">
 		Snowboarder, coder, recovering TV shows addict and avid language learner: Gianluca spends his free time planning his next trip and reading waaay too many books
+	</p>
+</div>
+
+<div  class="col-mid-2 team-member helper">
+	<img src="img/team/team_luca.jpg"/>
+	<p class="name">Luca</p>
+	<p class="pickup">
+		Hi,I'm Luca and I live here in Bolzano. Between a trip and the other one i am a student of economics too. I love music, biking and ice hockey.my life style: are you planning a journey? I'm totally in!
+	</p>
+</div>
+
+<div  class="col-mid-2 team-member helper">
+	<img src="img/team/team_mattia.jpg"/>
+	<p class="name">Mattia</p>
+	<p class="pickup">
+		The perfect combination between Economics, Design and modern cooking. Reckless photographer and snowboarder, with a rock and roll soul and a passion for mountains and nature that make him legen(wait for it)dary!
 	</p>
 </div>
