--- a/landingpage/html/team.html
+++ b/landingpage/html/team.html
@@ -58,6 +58,14 @@
 <h3>Helper</h3>
 
 <div  class="col-mid-2 team-member helper">
+	<img src="img/team/team_azhar.jpg"/>
+	<p class="name">Azhar</p>
+	<p class="pickup">
+		Azhar loves BOXING and he keeps on throwing those PUNCHES until one falls on the ground.
+	</p>
+</div>
+
+<div  class="col-mid-2 team-member helper">
 	<img src="img/team/team_ermanno.jpg"/>
 	<p class="name">Ermanno</p>
 	<p class="pickup">
