Added Emanuel to Team; changed event TN

--- a/landingpage/html/about.html
+++ b/landingpage/html/about.html
@@ -1,6 +1,6 @@
 <img style="margin-bottom: 30px" src="img/railsgirls54-logo2.png"/>
 <p>
-	Rails Girls 54 is a project by the Free University of Bolzano to bring the Rails Girls initiative to the Free University of Bolzano, the University of Innsbruck and the University of Trento.
+	Rails Girls 54 is a project by the Free University of Bolzano to bring the Rails Girls initiative to Bolzano-Bozen and Trento
 </p>
 <p>
 	Based on the idea of <a href="http://railsgirls.com/" target="_blank">Rails Girls</a> we are bringing tools and knowledge to your city so that you can realize your idea.
@@ -18,13 +18,12 @@
 
 	</p>
 
-	<h3>Bolzano is calling</h3>
+	<h3>Trento is calling</h3>
 	<p>
-		Wow, what a surprise! Bolzano was sold out in a couple of minutes and the 20 places were gone in a rush.
-		However, we switched over to a waiting list registration so if a spot clears up it might be yours!
+		After the very successful weekend in Bolzano-Bozen we will be in Trento for the next weekend. The event will be held at <a href="http://techpeaks.eu/" title="TechPeaks" target="_blank">TechPeaks</a> who is our host for the next RG54 weekend.
 	</p>
 	<p>
-		<a href="http://tinyurl.com/railsgirls54-bolzano" title="Register for RG54 in Bolzano" target="_blank">Register to the waiting list here</a>
+		<a href="https://www.surveymonkey.net//s/railsgirls54-trento-signup" title="Register for RG54 in Trento" target="_blank">Register for Trento</a>
 	</p>
 
 	<h3>Call for Volunteers</h3>
