--- a/landingpage/html/team.html
+++ b/landingpage/html/team.html
@@ -66,12 +66,22 @@
 </div>
 
 <div  class="col-mid-2 team-member helper">
+	<img src="img/team/team_emanuel.jpg"/>
+	<p class="name">Emanuel</p>
+	<p class="pickup">
+		Emanuel usually has his head in the clouds. But when he’s not daydreaming he’s working on new ideas or on one of his other countless projects. He also loves cooking, reading, movies and biking.
+	</p>
+</div>
+
+<!--
+<div  class="col-mid-2 team-member helper">
 	<img src="img/team/team_ermanno.jpg"/>
 	<p class="name">Ermanno</p>
 	<p class="pickup">
 		Pick up line loading...
 	</p>
 </div>
+-->
 
 <div  class="col-mid-2 team-member helper">
 	<img src="img/team/team_gianluca.jpg"/>
