--- a/landingpage/html/events.html
+++ b/landingpage/html/events.html
@@ -6,6 +6,7 @@
 		Free University of Bolzano-Bozen
 	</p>
 </div>
+<!--
 <div class="event col-md-4">
 	<h3>Innsbruck</h3>
 	<time>Friday, May 16 - Sunday, May 18</time>
@@ -13,10 +14,11 @@
 		University of Innsbruck
 	</p>
 </div>
+-->
 <div class="event col-md-4">
 	<h3>Trento</h3>
 	<time>Friday, May 23 - Sunday, May 25</time>
 	<p class="location">
-		University of Trento
+		TechPeaks - Trento
 	</p>
 </div>
