Added map for arrival at TN

--- a/landingpage/html/about.html
+++ b/landingpage/html/about.html
@@ -22,10 +22,15 @@
 	<p>
 		After the very successful weekend in Bolzano-Bozen we will be in Trento for the next weekend. The event will be held at <a href="http://techpeaks.eu/" title="TechPeaks" target="_blank">TechPeaks</a> who is our host for the next RG54 weekend.
 	</p>
-	<p>
+    <p>
 		<a href="https://www.surveymonkey.net//s/railsgirls54-trento-signup" title="Register for RG54 in Trento" target="_blank">Register for Trento</a>
 	</p>
-
+    <p id="map" class="text-center">
+        <a title="TechPeaks" target="_blank" href="http://maps.google.it/maps?q=Via+Sommarive,+38123+Povo,+Trento,+Trentino-alto+Adige&hl=it&ll=46.068199,11.150351&spn=0.007429,0.021136&gl=it&geocode=Ff7pvgIdGCSqAA&hnear=Via+Sommarive,+Povo,+Trento,+Trentino-alto+Adige&t=m&z=16">
+            <img alt="TechPeaks" src="http://maps.googleapis.com/maps/api/staticmap?center=46.066308,%2011.150383&zoom=16&size=400x300&markers=color:red|46.066308,%2011.150383&sensor=false"/>
+        </a>
+    </p>
+	
 	<h3>Call for Volunteers</h3>
 	<p>
 		Rails Girls 54 is a huge success. And huge means we need your help. Don't hesitate, simply send us an email to <a href="mailto:info@railsgirls54.com?Subject=I%20want%20to%20be%20a%20volunteer" target="_top">info@railsgirls54.com</a>.
