fixing saturday program

--- a/landingpage/html/program.html
+++ b/landingpage/html/program.html
@@ -102,6 +102,10 @@
 				<td><time>19:30</time></td>
 				<td><i>Dinner Time!</i></td>
 			</tr>
+            <tr>
+                <td><time>21.00</time></td>
+                <td><i>Coding continues</i></td>
+            </tr>
 			<tr>
 				<td><time>23:00</time></td>
 				<td>Venue closes</td>
