re-fixing saturday program

--- a/landingpage/html/program.html
+++ b/landingpage/html/program.html
@@ -104,7 +104,7 @@
 			</tr>
             <tr>
                 <td><time>21.00</time></td>
-                <td><i>Coding continues</i></td>
+                <td>Coding continues</td>
             </tr>
 			<tr>
 				<td><time>23:00</time></td>
