--- a/landingpage/html/about.html
+++ b/landingpage/html/about.html
@@ -26,9 +26,7 @@
 		<a href="https://www.surveymonkey.net//s/railsgirls54-trento-signup" title="Register for RG54 in Trento" target="_blank">Register for Trento</a>
 	</p>
     <p id="map" class="text-center">
-        <a title="TechPeaks" target="_blank" href="http://maps.google.it/maps?q=Via+Sommarive,+38123+Povo,+Trento,+Trentino-alto+Adige&hl=it&ll=46.068199,11.150351&spn=0.007429,0.021136&gl=it&geocode=Ff7pvgIdGCSqAA&hnear=Via+Sommarive,+Povo,+Trento,+Trentino-alto+Adige&t=m&z=16">
-            <img alt="TechPeaks" src="http://maps.googleapis.com/maps/api/staticmap?center=46.066308,%2011.150383&zoom=16&size=400x300&markers=color:red|46.066308,%2011.150383&sensor=false"/>
-        </a>
+        <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.it/maps/ms?msid=206777223834030808895.0004f1a4c609285814acd&amp;msa=0&amp;ie=UTF8&amp;t=m&amp;z=17&amp;output=embed"></iframe><br /><small>View <a href="https://maps.google.it/maps/ms?msid=206777223834030808895.0004f1a4c609285814acd&amp;msa=0&amp;ie=UTF8&amp;t=m&amp;z=17&amp;source=embed" style="color:#0000FF;text-align:left">TechPeaks HQ</a> in a larger map</small>
     </p>
 	
 	<h3>Call for Volunteers</h3>
