Added Christian to the team

--- a/landingpage/html/team.html
+++ b/landingpage/html/team.html
@@ -8,6 +8,14 @@
 </div>
 
 <div  class="col-mid-2 team-member">
+	<img src="img/team/team_christian.jpg"/>
+	<p class="name">Christian</p>
+	<p class="pickup">
+		I enjoy my time travelling around, and I've seen quite a lot of places, but I strongly believe that no place is like.. Where there's Pizza... Definitively, pizza. And Even better if they have a computer to hack around with while eating!
+	</p>
+</div>
+
+<div  class="col-mid-2 team-member">
 	<img src="img/team/team_carmine.jpg"/>
 	<p class="name">Carmine</p>
 	<p class="pickup">
