Added Piotr and Simone to helpers

--- a/landingpage/html/team.html
+++ b/landingpage/html/team.html
@@ -65,24 +65,28 @@
 
 <h3>Helper</h3>
 
-<div  class="col-mid-2 team-member helper">
+<!--
+<div class="col-mid-2 team-member helper">
 	<img src="img/team/team_azhar.jpg"/>
 	<p class="name">Azhar</p>
 	<p class="pickup">
 		Azhar loves BOXING and he keeps on throwing those PUNCHES until one falls on the ground.
 	</p>
 </div>
+-->
 
-<div  class="col-mid-2 team-member helper">
+<!--
+<div class="col-mid-2 team-member helper">
 	<img src="img/team/team_emanuel.jpg"/>
 	<p class="name">Emanuel</p>
 	<p class="pickup">
 		Emanuel usually has his head in the clouds. But when he’s not daydreaming he’s working on new ideas or on one of his other countless projects. He also loves cooking, reading, movies and biking.
 	</p>
 </div>
+-->
 
 <!--
-<div  class="col-mid-2 team-member helper">
+<div class="col-mid-2 team-member helper">
 	<img src="img/team/team_ermanno.jpg"/>
 	<p class="name">Ermanno</p>
 	<p class="pickup">
@@ -91,26 +95,48 @@
 </div>
 -->
 
-<div  class="col-mid-2 team-member helper">
+<!--
+<div class="col-mid-2 team-member helper">
 	<img src="img/team/team_gianluca.jpg"/>
 	<p class="name">Gianluca</p>
 	<p class="pickup">
 		Snowboarder, coder, recovering TV shows addict and avid language learner: Gianluca spends his free time planning his next trip and reading waaay too many books
 	</p>
 </div>
+-->
 
-<div  class="col-mid-2 team-member helper">
+<!--
+<div class="col-mid-2 team-member helper">
 	<img src="img/team/team_luca.jpg"/>
 	<p class="name">Luca</p>
 	<p class="pickup">
 		Hi,I'm Luca and I live here in Bolzano. Between a trip and the other one i am a student of economics too. I love music, biking and ice hockey.my life style: are you planning a journey? I'm totally in!
 	</p>
 </div>
+-->
 
-<div  class="col-mid-2 team-member helper">
+<!--
+<div class="col-mid-2 team-member helper">
 	<img src="img/team/team_mattia.jpg"/>
 	<p class="name">Mattia</p>
 	<p class="pickup">
 		The perfect combination between Economics, Design and modern cooking. Reckless photographer and snowboarder, with a rock and roll soul and a passion for mountains and nature that make him legen(wait for it)dary!
+	</p>
+</div>
+-->
+
+<div class="col-mid-2 team-member helper">
+	<img src="img/team/team_piotr.jpg"/>
+	<p class="name">Piotr</p>
+	<p class="pickup">
+        Ex-rubist, happy founder
+	</p>
+</div>
+
+<div class="col-mid-2 team-member helper">
+	<img src="img/team/team_simone.jpg"/>
+	<p class="name">Simone</p>
+	<p class="pickup">
+        Extracting ruby gems from mines since ever
 	</p>
 </div>
