Modifications in team

--- a/landingpage/html/team.html
+++ b/landingpage/html/team.html
@@ -63,9 +63,8 @@
 	</p>
 </div>
 
-<h3>Helper</h3>
+<h3>Helper Bolzano Bozen</h3>
 
-<!--
 <div class="col-mid-2 team-member helper">
 	<img src="img/team/team_azhar.jpg"/>
 	<p class="name">Azhar</p>
@@ -73,9 +72,7 @@
 		Azhar loves BOXING and he keeps on throwing those PUNCHES until one falls on the ground.
 	</p>
 </div>
--->
 
-<!--
 <div class="col-mid-2 team-member helper">
 	<img src="img/team/team_emanuel.jpg"/>
 	<p class="name">Emanuel</p>
@@ -83,19 +80,7 @@
 		Emanuel usually has his head in the clouds. But when he’s not daydreaming he’s working on new ideas or on one of his other countless projects. He also loves cooking, reading, movies and biking.
 	</p>
 </div>
--->
 
-<!--
-<div class="col-mid-2 team-member helper">
-	<img src="img/team/team_ermanno.jpg"/>
-	<p class="name">Ermanno</p>
-	<p class="pickup">
-		Pick up line loading...
-	</p>
-</div>
--->
-
-<!--
 <div class="col-mid-2 team-member helper">
 	<img src="img/team/team_gianluca.jpg"/>
 	<p class="name">Gianluca</p>
@@ -103,9 +88,7 @@
 		Snowboarder, coder, recovering TV shows addict and avid language learner: Gianluca spends his free time planning his next trip and reading waaay too many books
 	</p>
 </div>
--->
 
-<!--
 <div class="col-mid-2 team-member helper">
 	<img src="img/team/team_luca.jpg"/>
 	<p class="name">Luca</p>
@@ -113,9 +96,7 @@
 		Hi,I'm Luca and I live here in Bolzano. Between a trip and the other one i am a student of economics too. I love music, biking and ice hockey.my life style: are you planning a journey? I'm totally in!
 	</p>
 </div>
--->
 
-<!--
 <div class="col-mid-2 team-member helper">
 	<img src="img/team/team_mattia.jpg"/>
 	<p class="name">Mattia</p>
@@ -123,7 +104,16 @@
 		The perfect combination between Economics, Design and modern cooking. Reckless photographer and snowboarder, with a rock and roll soul and a passion for mountains and nature that make him legen(wait for it)dary!
 	</p>
 </div>
--->
+
+<h3>Helper Trento</h3>
+
+<div class="col-mid-2 team-member helper">
+	<img src="img/team/team_diego.jpg"/>
+	<p class="name">Diego</p>
+	<p class="pickup">
+        Diego is a proactive guy that his colleagues define workaholic. When he is not coding, he loves travel, skiing, play volleyball and enjoy nature!
+	</p>
+</div>
 
 <div class="col-mid-2 team-member helper">
 	<img src="img/team/team_piotr.jpg"/>
