--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	</nav>
 
 	<header class="page-header">
-		<h1 class="container"><img src="assets/img/railsgirls54-logo2.png" alt="Rails Girls 54"/></h1>
+		<h1 class="container"><img class="img-responsive" src="assets/img/railsgirls54-logo2.png" alt="Rails Girls 54"/></h1>
 	</header>
 
 	<div class="container">
