--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Rails Girls 54 - 2015</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<link rel="icon" type="image/png" href="img/favicon.png">
+	<link rel="icon" type="image/png" href="assets/img/favicon.png">
 	<link rel="shortcut icon" type="image/x-icon" href="/assets/img/favicon.png" />
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
