Updated program to 2016; improved program management

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<div class="container">
 		<section id="about" about></section>
 		<section id="events" ng-controller="eventCtrl" events></section>
-		<section id="program" class="clearfix" program></section>
+		<section id="program" ng-controller="programCtrl" class="clearfix" program></section>
 		<section id="team" ng-controller="teamCtrl" team></section>
 	</div>
 
