Added links to presentations

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 					<a href="#program" title="program">Program</a>
 				</li>
 				<li>
+					<a href="#material" title="material">Material</a>
+				</li>
+				<li>
 					<a href="#team" title="team">Team</a>
 				</li>
 			</ul>
@@ -50,6 +53,7 @@
 		<section id="about" about></section>
 		<section id="events" ng-controller="eventCtrl" events></section>
 		<section id="program" ng-controller="programCtrl" class="clearfix" program></section>
+		<section id="material" ng-controller="materialCtrl" class="clearfix" material></section>
 		<section id="team" ng-controller="teamCtrl" team></section>
 	</div>
 
